--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>
-      Diner Restaurants Category Bootstrap Responsive Web Template | Home :: W3Layouts
+      Diner Restaurants Category Bootstrap Responsive Web Template | Home ::
+      W3Layouts
     </title>
     <link
       href="//fonts.googleapis.com/css2?family=Pacifico&amp;display=swap"
@@ -35,31 +36,28 @@
   </head>
 
   <body>
-    <!--/banner-with-header-->
+    <!-- BANNER -->
     <section class="banner" id="home">
       <div class="container">
         <div class="header">
           <div class="header-logo">
             <h1><a class="logo-brand" href="">Diner </a></h1>
           </div>
-          <div class="w3menu-right-content">
+          <div class="right-content">
             <div class="search-bar">
-              <!--/search-right-->
               <form class="search position-relative">
                 <input
                   type="search"
                   class="search__input"
                   name="search"
                   placeholder="Search here.."
-                  onload="equalWidth()"
                   required=""
                 />
                 <span class="fa fa-search search__icon"></span>
               </form>
-              <!--//search-right-->
             </div>
-            <div class="w3_menu text-center">
-              <!-- toggle switch for light and dark theme -->
+            <div class="text-center">
+              <!-- ĐỔI MÀU THEME -->
               <div class="mobile-position">
                 <nav class="navigation">
                   <div class="theme-switch-wrapper">
@@ -73,7 +71,7 @@
                   </div>
                 </nav>
               </div>
-              <!-- //toggle switch for light and dark theme -->
+              <!-- //ĐỔI MÀU THEME -->
             </div>
             <div class="mobile-nav-button text-center">
               <button id="trigger-overlay" type="button">
@@ -83,7 +81,6 @@
           </div>
           <div class="overlay overlay-scale">
             <button type="button" class="overlay-close">
-              <!-- <i class="fa-solid fa-xmark"></i> -->
               <i class="fa fa-times" aria-hidden="true"></i>
             </button>
 
@@ -102,70 +99,77 @@
             </nav>
           </div>
         </div>
-        <!--/bannerhny-info-->
-        <div class="bannerhny-info">
+        <!-- NỘI DUNG BANNER -->
+        <div class="banner-content">
           <h3 class="mb-4">The only thing we love more than food is you!</h3>
-          <div class="separatorhny"></div>
           <p class="pr-lg-5 mt-md-4 mt-3">
-            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.Ea
-            ipsum sed consequuntur illum facere.
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi
+            vitae sit.Ea ipsum sed consequuntur illum facere.
           </p>
           <a class="btn btn-white mt-sm-5 mt-4 mr-2" href="">
-            Read More <span class="fa fa-chevron-right ml-2" aria-hidden="true"></span
+            Read More
+            <span class="fa fa-chevron-right ml-2" aria-hidden="true"></span
           ></a>
         </div>
-        <!--/bannerhny-info-->
+        <!-- //NỘI DUNG BANNER -->
       </div>
     </section>
-    <!--//banner-with-header-->
-    <!-- /content-1-->
-    <div class="w3l-content-1 py-5">
+    <!-- //BANNER -->
+
+    <!-- ABOUT US CONTENT -->
+    <div class="py-5">
       <div class="container py-md-5">
-        <div class="row content-1-grids">
-          <div class="col-lg-5 content-1-left">
+        <div class="row">
+          <div class="col-lg-5">
             <div class="header-title">
-              <h6 class="title-subhny">About Us</h6>
-              <h3 class="title-w3l mb-4">
+              <h6 class="title-orange">About Us</h6>
+              <h3 class="title-black mb-4">
                 We found our creative space that is open for you.
               </h3>
             </div>
           </div>
-          <div class="col-lg-7 content-1-right pl-lg-5 mt-lg-0 mt-3">
+          <div class="col-lg-7 pl-lg-5 mt-lg-0 mt-3">
             <p class="">
-              Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in
-              ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet elit. Non quae,
-              fugiat nihil ad. Lorem ipsum dolor sit amet. Lorem ipsum init dolor sit,
-              amet elit. Dolor ipsum non velit, culpa!Lorem ipsum init dolor sit.
+              Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
+              ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit
+              amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit amet.
+              Lorem ipsum init dolor sit, amet elit. Dolor ipsum non velit,
+              culpa!Lorem ipsum init dolor sit.
             </p>
             <p class="mt-3">
-              Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in
-              ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet elit. Non quae,
-              fugiat nihil ad. Lorem ipsum dolor sit amet.
+              Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
+              ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit
+              amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit amet.
             </p>
           </div>
         </div>
       </div>
     </div>
-    <!-- //content-1 -->
+    <!-- //ABOUT US CONTENT -->
 
-    <!-- footer -->
-    <section class="w3l-footer-29-main">
-      <div class="footer-29 py-5">
+    <!-- FOOTER -->
+    <section class="footer-main">
+      <div class="footer py-5">
         <div class="container py-lg-4">
-          <div class="row footer-top-29">
-            <div class="col-lg-4 col-md-6 col-sm-7 footer-list-29 footer-1 pr-lg-5">
+          <div class="row">
+            <div
+              class="col-lg-4 col-md-6 col-sm-7 footer-list footer-1 pr-lg-5"
+            >
               <div class="footer-logo mb-3">
                 <h2><a class="navbar-brand" href="">Diner</a></h2>
               </div>
               <p>
-                Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in
-                ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit.
+                Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
+                ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit
+                amet Semper at elit.
               </p>
-              <div class="main-social-footer-29 mt-4">
+              <div class="main-social-footer mt-4">
                 <a href="#facebook" class="facebook"
                   ><span class="fa fa-facebook"></span
                 ></a>
-                <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+                <a href="#twitter" class="twitter"
+                  ><span class="fa fa-twitter"></span
+                ></a>
                 <a href="#instagram" class="instagram"
                   ><span class="fa fa-instagram"></span
                 ></a>
@@ -175,10 +179,10 @@
               </div>
             </div>
             <div
-              class="col-lg-2 col-md-6 col-sm-5 col-6 footer-list-29 footer-2 mt-sm-0 mt-5"
+              class="col-lg-2 col-md-6 col-sm-5 col-6 footer-list footer-2 mt-sm-0 mt-5"
             >
               <ul>
-                <h6 class="footer-title-29">Usefull Links</h6>
+                <h6 class="footer-title">Usefull Links</h6>
                 <li><a href="#link">About Us</a></li>
                 <li><a href="#link">Services</a></li>
                 <li><a href="#link"> Blog posts</a></li>
@@ -187,9 +191,9 @@
               </ul>
             </div>
             <div
-              class="col-lg-2 col-md-6 col-sm-5 col-6 footer-list-29 footer-3 mt-lg-0 mt-5"
+              class="col-lg-2 col-md-6 col-sm-5 col-6 footer-list footer-3 mt-lg-0 mt-5"
             >
-              <h6 class="footer-title-29">More Info</h6>
+              <h6 class="footer-title">More Info</h6>
               <ul>
                 <li><a href="#history">History</a></li>
                 <li><a href="#vision">Vision &amp; Values</a></li>
@@ -198,11 +202,13 @@
                 <li><a href="#support"> Support</a></li>
               </ul>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-7 footer-list-29 footer-4 mt-lg-0 mt-5">
-              <h6 class="footer-title-29">Subscribe to our Newsletter</h6>
+            <div
+              class="col-lg-4 col-md-6 col-sm-7 footer-list footer-4 mt-lg-0 mt-5"
+            >
+              <h6 class="footer-title">Subscribe to our Newsletter</h6>
               <p>
-                Enter your email and receive the latest news, updates and special offers
-                from us.
+                Enter your email and receive the latest news, updates and
+                special offers from us.
               </p>
               <form action="#" class="subscribe mt-4" method="post">
                 <input
@@ -211,25 +217,27 @@
                   placeholder="Your Email Address"
                   required=""
                 />
-                <button class="btn btn-style btn-primary w-100 mt-3">Subscibe Now</button>
+                <button class="btn btn-style btn-primary w-100 mt-3">
+                  Subscibe Now
+                </button>
               </form>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- //footer -->
+    <!-- //FOOTER -->
 
     <!-- copyright -->
-    <section class="w3l-copyright">
+    <section class="copyright">
       <div class="container">
         <div class="row bottom-copies">
-          <p class="col-lg-8 copy-footer-29">
+          <p class="col-lg-8 copy-footer">
             © 2021 Diner. All rights reserved. Design by
             <a href="https://w3layouts.com/" target="_blank"> W3Layouts</a>
           </p>
 
-          <div class="col-lg-4 footer-list-29">
+          <div class="col-lg-4 footer-list">
             <ul class="d-flex text-lg-right">
               <li><a href="#careers"> Careers</a></li>
               <li class="mx-lg-5 mx-md-4 mx-3">
@@ -241,11 +249,11 @@
         </div>
       </div>
 
-      <!-- move top -->
+      <!-- BACK TO TOP -->
       <button onclick="topFunction()" id="movetop" title="Go to top">⤴</button>
       <script src="js/back-to-top.js"></script>
 
-      <!-- /move top -->
+      <!-- //BACK TO TOP -->
     </section>
     <!-- //copyright -->
     <!-- Template JavaScript -->
