--- a/index.html
+++ b/index.html
@@ -170,6 +170,112 @@
   </div>
   <!-- /BOOK TABLE -->
 
+<!-- SERVICES -->
+<section class="services py-5">
+  <div class="container py-lg-5 py-md-3 py-3">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="box-wrap">
+          <div class="box-wrap-grid">
+            <div class="icon">
+              <span class="fa fa-users"></span>
+            </div>
+            <div >
+              <p>01</p>
+              <h4><a href="">Soup</a></h4>
+            </div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 mt-md-0 mt-4">
+        <div class="box-wrap">
+          <div class="box-wrap-grid">
+            <div class="icon">
+              <span class="fa fa-shield"></span>
+            </div>
+            <div >
+              <p>02</p>
+              <h4><a href="">Drinks</a></h4>
+            </div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-0 mt-4">
+        <div class="box-wrap">
+          <div class="box-wrap-grid">
+            <div class="icon">
+              <span class="fa fa-thermometer-full"></span>
+            </div>
+            <div >
+              <p>03</p>
+              <h4><a href="">Pizza</a></h4>
+            </div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 mt-4">
+        <div class="box-wrap">
+          <div class="box-wrap-grid">
+            <div class="icon">
+              <span class="fa fa-american-sign-language-interpreting"></span>
+            </div>
+            <div >
+              <p>04</p>
+              <h4><a href="">Breakfast</a></h4>
+            </div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 mt-4">
+        <div class="box-wrap">
+          <div class="box-wrap-grid">
+            <div class="icon">
+              <span class="fa fa-paint-brush"></span>
+            </div>
+            <div >
+              <p>05</p>
+              <h4><a href="">Lunch</a></h4>
+            </div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 mt-4">
+        <div class="box-wrap">
+          <div class="box-wrap-grid">
+            <div class="icon">
+              <span class="fa fa-eraser"></span>
+            </div>
+            <div >
+              <p>06</p>
+              <h4><a href="">Dinner</a></h4>
+            </div>
+          </div>
+          <p class="mt-3">
+            Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- //SERVICES -->
+
+
   <!-- FOOTER -->
   <section class="footer-main">
     <div class="footer py-5">
