--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
     </div>
   </div>
   <!-- //ABOUT US CONTENT -->
-  <!-- <table></table> -->
-  <section class="table">
+  <!-- <Categories></Categories> -->
+  <section class="Categories">
     <div class="container">
-      <div class="table-title">
+      <div class="Categories-title">
         <h6 class="title-orange">What's New</h6>
         <h3 class="title-black mb-4">
           Popular Categories
@@ -135,14 +135,14 @@
       </div>
       <div class="row">
         <div class="col-lg-4 col-6">
-          <div class="table__item">
-            <div class="table__img">
+          <div class="Categories__item">
+            <div class="Categories__img">
               <a href="#">
                 <img src="./images/g1.jpg" alt="g1">
               </a>
             </div>
-            <div class="table__overplay">
-              <div class="table__info">
+            <div class="Categories__overplay">
+              <div class="Categories__info">
                 <a href="#">
                   <h4>Vegetarian</h4>
                 </a>
@@ -154,14 +154,14 @@
           </div>
         </div>
         <div class="col-lg-4 col-6">
-          <div class="table__item">
-            <div class="table__img">
+          <div class="Categories__item">
+            <div class="Categories__img">
               <a href="#">
                 <img src="./images/g2.jpg" alt="g1">
               </a>
             </div>
-            <div class="table__overplay">
-              <div class="table__info">
+            <div class="Categories__overplay">
+              <div class="Categories__info">
                 <a href="#">
                   <h4>Drinks</h4>
                 </a>
@@ -173,14 +173,14 @@
           </div>
         </div>
         <div class="col-lg-4 col-6">
-          <div class="table__item">
-            <div class="table__img">
+          <div class="Categories__item">
+            <div class="Categories__img">
               <a href="#">
                 <img src="./images/g3.jpg" alt="g1">
               </a>
             </div>
-            <div class="table__overplay">
-              <div class="table__info">
+            <div class="Categories__overplay">
+              <div class="Categories__info">
                 <a href="#">
                   <h4>Lunchn</h4>
                 </a>
@@ -192,14 +192,14 @@
           </div>
         </div>
         <div class="col-lg-4 col-6">
-          <div class="table__item">
-            <div class="table__img">
+          <div class="Categories__item">
+            <div class="Categories__img">
               <a href="#">
                 <img src="./images/g4.jpg" alt="g1">
               </a>
             </div>
-            <div class="table__overplay">
-              <div class="table__info">
+            <div class="Categories__overplay">
+              <div class="Categories__info">
                 <a href="#">
                   <h4>Vegetarian</h4>
                 </a>
@@ -211,14 +211,14 @@
           </div>
         </div>
         <div class="col-lg-4 col-6">
-          <div class="table__item">
-            <div class="table__img">
+          <div class="Categories__item">
+            <div class="Categories__img">
               <a href="#">
                 <img src="./images/g5.jpg" alt="g1">
               </a>
             </div>
-            <div class="table__overplay">
-              <div class="table__info">
+            <div class="Categories__overplay">
+              <div class="Categories__info">
                 <a href="#">
                   <h4>Desserts</h4>
                 </a>
@@ -230,14 +230,14 @@
           </div>
         </div>
         <div class="col-lg-4 col-6">
-          <div class="table__item">
-            <div class="table__img">
+          <div class="Categories__item">
+            <div class="Categories__img">
               <a href="#">
                 <img src="./images/g6.jpg" alt="g1">
               </a>
             </div>
-            <div class="table__overplay">
-              <div class="table__info">
+            <div class="Categories__overplay">
+              <div class="Categories__info">
                 <a href="#">
                   <h4>Pizza</h4>
                 </a>
