sửa màu nền, reponsive text,hover

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </div>
   <!-- /BOOK TABLE -->
 
-  <!-- <Categories></Categories> -->
+  <!-- <Categories>-->
   <section class="Categories">
     <div class="container">
       <div class="Categories-title">
@@ -295,12 +295,10 @@
             </div>
           </div>
         </div>
-
       </div>
-
     </div>
   </section>
-
+<!-- </Categories>  -->
 
   <!-- SERVICES -->
   <section class="services py-5">
