hoàn thành phần stats

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       </div>
     </div>
   </section>
-<!-- </Categories>  -->
+  <!-- </Categories>  -->
 
   <!-- SERVICES -->
   <section class="services py-5">
@@ -405,6 +405,60 @@
   </section>
   <!-- //SERVICES -->
 
+  <!-- STATS BANNER -->
+  <div class="middle py-5">
+    <div class="container pt-lg-2 pb-lg-4 py-4">
+      <div class="banner-content text-center py-lg-5">
+        <h3 class="px-lg-5">Deliciousness jumping into the mouth.</h3>
+        <div class="pb-lg-5">
+          <a href="#read-more" class="btn btn-style btn-white mt-sm-5 mt-4 mr-lg-4 mr-2">Read More <span
+              class="fa fa-chevron-right ml-2" aria-hidden="true"></span></a>
+          <a href="#contact-us" class="btn btn-style btn-primary mt-sm-5 mt-4">Contact Us <span
+              class="fa fa-chevron-right ml-2" aria-hidden="true"></span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- //STATS BANNER  -->
+
+  <!-- STATS -->
+  <section class="stats py-lg-0 py-md-5 py-4" id="stats">
+    <div class="container">
+      <div class="stats-content">
+        <div class="row">
+          <div class="col-md-3 col-6 mt-md-0 mt-4">
+            <div class="counter">
+              <span class="fa fa-building-o"></span>
+              <div class="timer count-number mt-3" data-to="15100" data-speed="1500"></div>
+              <p class="count-text">Branches</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-6 mt-md-0 mt-4">
+            <div class="counter">
+              <span class="fa fa-cutlery"></span>
+              <div class="timer count-number mt-3" data-to="19256" data-speed="1500"></div>
+              <p class="count-text">Food Items</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-6 mt-md-0 mt-4">
+            <div class="counter">
+              <span class="fa fa-users"></span>
+              <div class="timer count-number mt-3" data-to="12100" data-speed="1500"></div>
+              <p class="count-text">Chefs</p>
+            </div>
+          </div>
+          <div class="col-md-3 col-6 mt-md-0 mt-4">
+            <div class="counter">
+              <span class="fa fa-smile-o"></span>
+              <div class="timer count-number mt-3" data-to="2560" data-speed="1500"></div>
+              <p class="count-text">Happy Customers</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //STATS -->
 
   <!-- FOOTER -->
   <section class="footer-main">
@@ -509,6 +563,9 @@
   <script src="js/trigger-overlay.js"></script>
   <!-- //nav -->
 
+  <!-- /counter-->
+  <script src="js/counter.js"></script>
+  <!-- //counter-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.min.js"
     integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
