--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
   <!-- //SERVICES -->
 
   <!-- STATS BANNER -->
-  <div class="middle py-5">
+  <div class="banner2 py-5">
     <div class="container pt-lg-2 pb-lg-4 py-4">
-      <div class="banner-content text-center py-lg-5">
+      <div class="banner2-content text-center py-lg-5">
         <h3 class="px-lg-5">Deliciousness jumping into the mouth.</h3>
         <div class="pb-lg-5">
           <a href="#read-more" class="btn btn-style btn-white mt-sm-5 mt-4 mr-lg-4 mr-2">Read More <span
