--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
     <div class="container py-md-5">
       <div class="row">
         <div class="col-lg-5">
-          <div class="header-title">
-            <h6 class="title-orange">About Us</h6>
-            <h3 class="title-black mb-4">
-              We found our creative space that is open for you.
-            </h3>
 
-          </div>
+          <h6 class="title-orange">About Us</h6>
+          <h3 class="title-black mb-4">
+            We found our creative space that is open for you.
+          </h3>
+
+
         </div>
         <div class="col-lg-7 pl-lg-5 mt-lg-0 mt-3">
           <p class="">
@@ -460,6 +460,118 @@
   </section>
   <!-- //STATS -->
 
+  <!--/BLOGS-->
+  <section class="blogs py-5" id="blogs">
+    <div class="container py-md-5 py-2">
+      <div class="text-center">
+        <h6 class="title-orange">Latest Posts</h6>
+        <h3 class="title-black">Blog Posts</h3>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 item mt-5">
+          <div class="card">
+            <div class="p-0 position-relative">
+              <a href="#blogs">
+                <img class="card-img-bottom d-block radius-image" src="images/banner1.jpg" alt="Card image cap" />
+              </a>
+              <div class="above-img-content">
+                <a href="#reciepe" class="receipe green">Reciepe</a>
+                <span class="meta-info">
+                  <span class="fa fa-clock-o mr-2" aria-hidden="true"></span>10 Min Cook
+                </span>
+              </div>
+            </div>
+            <div class="p-0 blog-details">
+              <a href="#blogs" class="blog-title">The Best Cookie Recipes To Bake This Weekend
+              </a>
+              <p>
+                Lorem ipsum dolor sit amet ipsum adipisicing elit. Qui eligendi vitae
+                sit.
+              </p>
+              <div class="p-footer mt-3">
+                <div class="p-meta-info">
+                  <a href="#img" class="post-img-anchor">
+                    <img src="images/team1.jpg" alt="" class="post-img radius-img img-fluid" />
+                  </a>
+                  <a href="#url">Rashed Kabir</a>
+                </div>
+                <a href="#read" class="read">Read More
+                  <span class="fa fa-chevron-right ml-2" aria-hidden="true"></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 item mt-5">
+          <div class="card">
+            <div class="p-0 position-relative">
+              <a href="#blogs">
+                <img class="card-img-bottom d-block radius-image" src="images/banner3.jpg" alt="Card image cap" />
+              </a>
+              <div class="above-img-content">
+                <a href="#reciepe" class="receipe green">Soup</a>
+                <span class="meta-info">
+                  <span class="fa fa-clock-o mr-2" aria-hidden="true"></span>10 Min Cook
+                </span>
+              </div>
+            </div>
+            <div class="p-0 blog-details">
+              <a href="#blogs" class="blog-title">The Best Cookie Recipes To Bake This Weekend
+              </a>
+              <p>
+                Lorem ipsum dolor sit amet ipsum adipisicing elit. Qui eligendi vitae
+                sit.
+              </p>
+              <div class="p-footer mt-3">
+                <div class="p-meta-info">
+                  <a href="#img" class="post-img-anchor">
+                    <img src="images/team2.jpg" alt="" class="post-img radius-img img-fluid" />
+                  </a>
+                  <a href="#url">Jannatul Ferdous</a>
+                </div>
+                <a href="#read" class="read">Read More
+                  <span class="fa fa-chevron-right ml-2" aria-hidden="true"></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 item mt-5">
+          <div class="card">
+            <div class="p-0 position-relative">
+              <a href="#blogs">
+                <img class="card-img-bottom d-block radius-image" src="images/banner1.jpg" alt="Card image cap" />
+              </a>
+              <div class="above-img-content">
+                <a href="#reciepe" class="receipe green">Drinks</a>
+                <span class="meta-info">
+                  <span class="fa fa-clock-o mr-2" aria-hidden="true"></span>15 Min Cook
+                </span>
+              </div>
+            </div>
+            <div class="p-0 blog-details">
+              <a href="#blogs" class="blog-title">The Best Cookie Recipes To Bake This Weekend
+              </a>
+              <p>
+                Lorem ipsum dolor sit amet ipsum adipisicing elit. Qui eligendi vitae
+                sit.
+              </p>
+              <div class="p-footer mt-3">
+                <div class="p-meta-info">
+                  <a href="#img" class="post-img-anchor">
+                    <img src="images/team3.jpg" alt="" class="post-img radius-img img-fluid" />
+                  </a>
+                  <a href="#url">Rashed Kabir</a>
+                </div>
+                <a href="#read" class="read">Read More
+                  <span class="fa fa-chevron-right ml-2" aria-hidden="true"></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--//BLOGS-->
+
   <!-- FOOTER -->
   <section class="footer-main">
     <div class="footer py-5">
@@ -552,7 +664,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
     integrity="sha512-+NqPlbbtM1QqiK8ZAo4Yrj2c4lNQoGv8P79DPtKzj++l5jnN39rHA/xsqn8zE9l0uSoxaCdrOgFs6yjyfbBxSg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+
   <!-- /nav -->
   <script src="js/theme-change.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"
