--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <img class="card-img-bottom d-block radius-image" src="images/banner1.jpg" alt="Card image cap" />
               </a>
               <div class="above-img-content">
-                <a href="#reciepe" class="receipe green">Reciepe</a>
+                <a href="#reciepe" class="receipe">Reciepe</a>
                 <span class="meta-info">
                   <span class="fa fa-clock-o mr-2" aria-hidden="true"></span>10 Min Cook
                 </span>
@@ -489,8 +489,8 @@
                 sit.
               </p>
               <div class="p-footer mt-3">
-                <div class="p-meta-info">
-                  <a href="#img" class="post-img-anchor">
+                <div class="bottom-meta-info">
+                  <a href="#img" class="card-profile-img">
                     <img src="images/team1.jpg" alt="" class="post-img radius-img img-fluid" />
                   </a>
                   <a href="#url">Rashed Kabir</a>
@@ -508,7 +508,7 @@
                 <img class="card-img-bottom d-block radius-image" src="images/banner3.jpg" alt="Card image cap" />
               </a>
               <div class="above-img-content">
-                <a href="#reciepe" class="receipe green">Soup</a>
+                <a href="#reciepe" class="receipe">Soup</a>
                 <span class="meta-info">
                   <span class="fa fa-clock-o mr-2" aria-hidden="true"></span>10 Min Cook
                 </span>
@@ -522,8 +522,8 @@
                 sit.
               </p>
               <div class="p-footer mt-3">
-                <div class="p-meta-info">
-                  <a href="#img" class="post-img-anchor">
+                <div class="bottom-meta-info">
+                  <a href="#img" class="card-profile-img">
                     <img src="images/team2.jpg" alt="" class="post-img radius-img img-fluid" />
                   </a>
                   <a href="#url">Jannatul Ferdous</a>
@@ -541,7 +541,7 @@
                 <img class="card-img-bottom d-block radius-image" src="images/banner1.jpg" alt="Card image cap" />
               </a>
               <div class="above-img-content">
-                <a href="#reciepe" class="receipe green">Drinks</a>
+                <a href="#reciepe" class="receipe">Drinks</a>
                 <span class="meta-info">
                   <span class="fa fa-clock-o mr-2" aria-hidden="true"></span>15 Min Cook
                 </span>
@@ -555,8 +555,8 @@
                 sit.
               </p>
               <div class="p-footer mt-3">
-                <div class="p-meta-info">
-                  <a href="#img" class="post-img-anchor">
+                <div class="bottom-meta-info">
+                  <a href="#img" class="card-profile-img">
                     <img src="images/team3.jpg" alt="" class="post-img radius-img img-fluid" />
                   </a>
                   <a href="#url">Rashed Kabir</a>
